--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "dependencies": {
     "itty-router": "^2.4.3",
     "openai": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/itty-router": "^2.4.0",
+    "@types/node": "^18.15.8",
+    "typescript": "^4.9.5",
+    "wrangler": "^2.11.0"
   }
 }
