--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ route = "astraea-cli.com/*"  # Or a subdomain like cli.your-domain.com
   command = "npm run build" 
 
 [[r2_buckets]]
-  binding = "ASTRAEA_DATA" # Use the same name as in your code
+  binding = "ASTRAEA_DATA" 
   bucket_name = "astraea-cli-data" # Replace with your actual bucket name
 
 [vars]
